tests/ui/const-generics/mgca/wrong_type_const_arr_diag.stderr
error[E0308]: mismatched types
  --> $DIR/wrong_type_const_arr_diag.rs:9:32
   |
LL |     let _: TakesArr<{ [N] }> = TakesArr::<{ [1] }>;
   |            -----------------   ^^^^^^^^^^^^^^^^^^^ expected `[N]`, found `*b"\x01"`
   |            |
   |            expected due to this
   |
   = note: expected struct `TakesArr<[N]>`
              found struct `TakesArr<*b"\x01">`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
